@@ -136,7 +136,7 @@ Return any errors or warnings in this structure.
 <P></P></DL></DL>
 <P>
 <H2><A NAME="pingimage">PingImage</A></H2>
-<blockquote>PingImage ( ) returns all the attributes of an image or image sequenceexcept for the pixels. It is much faster and consumes far less memory than ReadImage ( ) . On failure, a NULL image is returned and exceptiondescribes the reason for the failure.; </blockquote><P>The format of the PingImage method is:</P>
+<blockquote>PingImage ( ) returns all the attributes of an image or image sequenceexcept for the pixels. It is much faster and consumes far less memorythan ReadImage ( ) . On failure, a NULL image is returned and exceptiondescribes the reason for the failure.; </blockquote><P>The format of the PingImage method is:</P>
 <blockquote><A HREF="types/Image.html">Image</A> *PingImage ( const <A HREF="types/ImageInfo.html">ImageInfo</A> *image_info, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
 <DL><DL>
